test_programs/compile_failure/noirc_frontend_tests_attempt_to_add_with_overflow_at_comptime/src/main.nr

        fn main() -> pub u8 {
            comptime {
                255 as u8 + 1 as u8
            }
        }

        
